# surrealdb_rust_example

./: .gitignore  Cargo.toml
src/: main.rs  todo_input.rs  todo_model.rs  utils.rs
