[package]
name = "test_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = {git= "https://github.com/surrealdb/surrealdb.git",features=["kv-rocksdb"]}
tokio = { version = "1.25.0", features = ["default","rt","macros"] }
anyhow = "1.0.68"


